[package]
name = "tencentcloud-sms-sdk-rust"
version = "0.1.0"
authors = ["michael <gogomagic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1"
surf = "2.2.0"
chrono = "0.4"
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4"
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"